--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,8 @@
 <html lang="en" style="background-color: #000">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
-    />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Parking Sign Reminder Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Parking Sign Reminder Generator Client</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
